--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
                 <button class="pdf-btn" onclick="loadPDF('2')">📄 PDF 2</button>
                 <button class="pdf-btn" onclick="loadPDF('3')">📄 PDF 3</button>
                 <button class="pdf-btn" onclick="loadPDF('4')">📄 PDF 4</button>
+                <button class="pdf-btn" onclick="loadPDF('1000')">📄 PDF 1000</button>
             </div>
         </div>
 
