--- a/index.html
+++ b/index.html
@@ -317,6 +317,12 @@
                 <button class="pdf-btn" onclick="loadPDF('3')">📄 PDF 3</button>
                 <button class="pdf-btn" onclick="loadPDF('4')">📄 PDF 4</button>
                 <button class="pdf-btn" onclick="loadPDF('1000')">📄 PDF 1000</button>
+                <button class="pdf-btn" onclick="loadPDF('1001')">📄 PDF 1001</button>
+                <button class="pdf-btn" onclick="loadPDF('1003')">📄 PDF 1003</button>
+                <button class="pdf-btn" onclick="loadPDF('1019')">📄 PDF 1019</button>
+                <button class="pdf-btn" onclick="loadPDF('1040')">📄 PDF 1040</button>
+		<button class="pdf-btn" onclick="loadPDF('1112')">📄 PDF 1112</button>
+                <button class="pdf-btn" onclick="loadPDF('1113')">📄 PDF 1113</button>
             </div>
         </div>
 
